// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshots primary in light + dark: primary-dark 1`] = `
<View
  className=""
  style={
    [
      {
        "opacity": 1,
      },
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      className="bg-surface rounded-md"
      style={
        [
          {
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          },
          [
            {
              "minHeight": 44,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 18,
            },
            {
              "shadowColor": "#1F1F1F",
              "shadowOffset": {
                "height": -4,
                "width": -4,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            },
          ]
        }
      />
      <View
        className="py-3 px-5 items-center justify-center"
      >
        <View
          className="flex-row items-center justify-center gap-2"
        >
          <Text
            style={
              [
                {
                  "color": "#F2F2F7",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                undefined,
              ]
            }
          >
            Save
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button snapshots primary in light + dark: primary-light 1`] = `
<View
  className=""
  style={
    [
      {
        "opacity": 1,
      },
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      className="bg-surface rounded-md"
      style={
        [
          {
            "shadowColor": "#BFBFBF",
            "shadowOffset": {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          },
          [
            {
              "minHeight": 44,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 18,
            },
            {
              "shadowColor": "#FFFFFF",
              "shadowOffset": {
                "height": -4,
                "width": -4,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            },
          ]
        }
      />
      <View
        className="py-3 px-5 items-center justify-center"
      >
        <View
          className="flex-row items-center justify-center gap-2"
        >
          <Text
            style={
              [
                {
                  "color": "#1C1C1E",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                undefined,
              ]
            }
          >
            Save
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
